# langton_ant

./: pyproject.toml  test.yml
langton_ant/: __init__.py  ant.py  board.py  cmd_line.py  color.py  dir.py  exceptions.py  main.py  simulation.py  state.py
tests/: test_0100_ant.py  test_0200_board.py
